# ESD_Project

./: README.md
Project/: .clangd  .gitignore  I2C_Config.c  I2C_Config.h  Oximeter.c  Oximeter.h  SysClockConfig.c  SysClockConfig.h  UART_Config.c  UART_Config.h  esd_project+Target_1.cbuild.yml  esd_project+Target_1.cprj  esd_project.cbuild-idx.yml  esd_project.cbuild-pack.yml  esd_project.cbuild-set.yml  esd_project.cproject.yml  esd_project.csolution.yml  esd_project.uvguix.rahul  esd_project.uvoptx  esd_project.uvprojx  main.c  main.h
Project/Listings/: esd_project.map
Project/Objects/: esd_project.axf  esd_project.build_log.htm  esd_project.htm  esd_project.lnp  esd_project_Target 1.dep  i2c_config.d  main.d  oximeter.d  stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  sysclockconfig.d  system_stm32f4xx.d  uart_config.d
Project/RTE/_Target_1/: Pre_Include_Global.h  RTE_Components.h
Project/tmp/esd_project/Target_1/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
Project/tmp/esd_project/Target_1/.cache/clangd/index/: I2C_Config.c.A839005215138C72.idx  I2C_Config.h.D7EB5803E477A660.idx  Oximeter.c.3D88ADB36B5EC82F.idx  Oximeter.h.9E740BDD6FCCA84F.idx  SysClockConfig.c.02044727860C557B.idx  SysClockConfig.h.785BA58481C80FEC.idx  UART_Config.c.06DCEC46CBCA32DC.idx  UART_Config.h.7CB98EC2DBBA67FF.idx  main.c.C17B76F2CDF2F7C0.idx  main.h.FD969E0A1A8D0B75.idx  system_stm32f4xx.c.7E9C0095C4CC891B.idx
